objects/CRM_AudienceUploadJunction__c.object
<CustomObject>
    <fields>
        <fullName>CRM_AudienceCount__c</fullName>
        <label>Audience Count</label>
        <precision>8</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CRM_BatchCounter__c</fullName>
        <label>Batch Counter</label>
        <precision>12</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CRM_Campaign__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Campaign</label>
        <referenceTo>Campaign</referenceTo>
        <relationshipLabel>Audience Upload Junctions</relationshipLabel>
        <relationshipName>CRM_AudienceUploadJunctions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CRM_ToDelete__c</fullName>
        <defaultValue>false</defaultValue>
        <label>To Delete</label>
        <type>Checkbox</type>
    </fields>
    <label>Audience Upload Junction</label>
    <nameField>
        <displayFormat>A-{00000000}</displayFormat>
        <label>Audience Upload Junction Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Audience Upload Junctions</pluralLabel>
    <recordTypes>
        <fullName>Audience_Report</fullName>
        <active>true</active>
        <description>Will be used to link audience report to campaign</description>
        <label>Audience Report</label>
    </recordTypes>
    <recordTypes>
        <fullName>Audience_Upload</fullName>
        <active>true</active>
        <description>Will be used to link audience upload records with Campaign</description>
        <label>Audience Upload</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>